[package]
name = "decaf377-rdsa"
edition = "2018"
version = "0.3.0"
authors = ["Penumbra Labs <team@penumbra.zone>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "decaf377-rdsa is a randomizable signature scheme using the decaf377 group."

[dependencies]
blake2b_simd = "0.5"
byteorder = "1.3"
decaf377 = { git = "https://github.com/penumbra-zone/decaf377" }
digest = "0.9"
rand_core = "0.6"
serde = { version = "1", optional = true, features = ["derive"] }
thiserror = "1.0"
ark-serialize = "0.3"
ark-ff = "0.3"
hex = "0.4"

[dev-dependencies]
bincode = "1"
criterion = "0.3"
lazy_static = "1.4"
proptest = "1"
rand = "0.8"
rand_chacha = "0.3"

[[bench]]
name = "bench"
harness = false

[features]
default = ["serde"]
