[package]
name = "decaf377-rdsa"
edition = "2021"
version = "0.9.0"
authors = ["Penumbra Labs <team@penumbralabs.xyz>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "decaf377-rdsa is a randomizable signature scheme using the decaf377 group."
repository = "https://github.com/penumbra-zone/decaf377-rdsa"

[dependencies]
# No Alloc, No Std
blake2b_simd = { version = "0.5", default-features = false }
decaf377 = { git = "https://github.com/penumbra-zone/decaf377", rev = "e26c88c896d9e3da4677bfe9ba127ce45979e0b2", default-features = false }
digest = { version = "0.9", default-features = false }
rand_core = { version = "0.6", default-features = false }
hex = { version = "0.4", default-features = false }
# Only to satisfy Cargo
zeroize = { version = "1.7", default-features = false }
# Alloc, No Std
ark-ff = { version = "0.4", optional = true, default-features = false }
ark-serialize = { version = "0.4", optional = true }
# Std
serde = { version = "1", optional = true, features = ["derive"] }
thiserror = { version = "1.0", optional = true }

[dev-dependencies]
bincode = "1"
criterion = "0.3"
lazy_static = "1.4"
proptest = "1"
rand = "0.8"
rand_chacha = "0.3"
anyhow = "1.0"

[[bench]]
name = "bench"
harness = false

[features]
default = ["serde", "std"]
alloc = ["ark-ff", "ark-serialize"]
std = ["alloc", "ark-ff/std", "blake2b_simd/std", "decaf377/arkworks", "digest/std", "hex/std", "rand_core/std", "thiserror"]
parallel = ["ark-ff/parallel", "decaf377/parallel"]

# Create profile for running checks in CI that are mostly "release" mode,
# but also checking the `debug_assert `lines.
[profile.ci]
inherits = "release"
debug-assertions = true
